--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
-
+<div class="container">
+    <img class="title" src="imgs/popcat.svg">
+    <div class="cat-img">15</div>
+</div>
 </body>
 </html>
